# gtk-rust-template

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  meson.build  meson_options.txt
.github/workflows/: ci.yaml
build-aux/: com.example.gtk_rust_template.Devel.json  com.example.gtk_rust_template.json
data/: com.example.gtk_rust_template.desktop.in.in  com.example.gtk_rust_template.gresource.xml.in  com.example.gtk_rust_template.gschema.xml  com.example.gtk_rust_template.metainfo.xml.in.in  gschemas.compiled  meson.build
data/resources/: .gitkeep
po/: POTFILES.in  en_GB.po  es.po  meson.build
src/: application.rs  main.rs
src/widgets/: mod.rs  window.blp  window.rs
