[package]
name = "gtk-rust-template"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.6", features = ["gettext-system"] }
gvdb-macros = "0.1.12"
once_cell = "1.18.0"

[dependencies.gtk]
package = "gtk4"
version = "0.11"
features = ["v4_20", "blueprint"]

[dependencies.adw]
package = "libadwaita"
version = "0.9"
features = ["v1_8"]
